pb navbar résolu

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -36,7 +36,7 @@
           </div>
         <% else %>
           <div class="CTA-btn">
-            <%= link_to "Nous rejoindre", new_user_session_path, data: {turbo_method: :delete}, class: "CTA-btn" %>
+            <%= link_to "Nous rejoindre", new_user_session_path, class: "CTA-btn" %>
           </div>
         <% end %>
       </div>
