--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -28,7 +28,7 @@
             <a class="dropdown-item" href="#">Something else here</a>
           </div>
         <% elsif user_signed_in? && !current_user.photo.present? %>
-          <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+          <%= image_tag "https://res.cloudinary.com/de3m2ax5t/image/upload/v1655984997/Capture_d_e%CC%81cran_2022-06-23_a%CC%80_13.48.00_usnppx.png", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <%= link_to "Mon dashboard", inscriptions_path, class:"dropdown-item" %>
             <%= link_to "Modifier mes informations", edit_user_registration_path, class:"dropdown-item" %>
