pb cloudinary non résolu

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -63,7 +63,7 @@
     </div>
 
     <div class="form-actions">
-      <%= f.button :submit, "Update" %>
+      <%= f.button :submit, "Valider vos nouvelles informations" %>
     </div>
   <% end %>
 </div>
