--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -21,7 +21,7 @@
   <div class="collapse navbar-collapse flex-grow-0" id="navbarNavDropdown">
       <div class="nav-item dropdown">
         <% if user_signed_in? && current_user.photo.present? %>
-          <%= cl_image_tag current_user.photo.key %>
+          <%= cl_image_tag current_user.photo.key, class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <a class="dropdown-item" href="#">Action</a>
             <a class="dropdown-item" href="#">Another action</a>
@@ -36,7 +36,7 @@
           </div>
         <% else %>
           <div class="CTA-btn">
-            <%= link_to "Nous rejoindre", new_user_session_path, data: {turbo_method: :delete}, class: "CTA-btn" %>
+            <%= link_to "Nous rejoindre", new_user_session_path, class: "CTA-btn" %>
           </div>
         <% end %>
       </div>
