--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -8,8 +8,8 @@
       <%= f.label :email %><br>
       <%= f.text_field :email, required: true, class: "contact-form-text-area" %><br>
 
-      <%= f.label :message %><br>
-      <%= f.text_area :message, rows: 8, cols: 40, required: true, class: "contact-form-text-area",
+      <%= f.label :body %><br>
+      <%= f.text_area :body, rows: 8, cols: 40, required: true, class: "contact-form-text-area",
             placeholder: "Send me a message"%><br>
 
       <div class= "d-none">
