photos et vidéos s'affichent sur une formation

--- a/app/views/formations/show.html.erb
+++ b/app/views/formations/show.html.erb
@@ -4,7 +4,7 @@
 
 <div class="card-show">
   <% if @formation.photos.attached? %>
-    <%= cl_image_tag formation.photos.first.key %>
+    <%= cl_image_tag @formation.photos.first.key %>
   <% else %>
     <%= image_tag "https://res.cloudinary.com/de3m2ax5t/image/upload/v1654539015/business-team_BT6YG9XMB0_zka89k.jpg" %>
   <% end %>
@@ -28,11 +28,14 @@
         <div>
           <div>
             <% if @formation.videos.attached? %>
+              <% @formation.videos.each do |video| %>
+                <%= cl_video_tag video.key, class:"video-formation" %>
+              <% end %>
             <% end %>
           </div>
           <div>
             <% if @formation.photos.attached? %>
-              <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+              <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                   <% @formation.photos.each do |photo| %>
                     <div class="carousel-item active">
@@ -40,14 +43,14 @@
                     </div>
                   <% end %>
                 </div>
-                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
                   <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="sr-only">Next</span>
-                </a>
+                  <span class="visually-hidden">Next</span>
+                </button>
               </div>
             <% end %>
           </div>
