--- a/app/views/formations/show.html.erb
+++ b/app/views/formations/show.html.erb
@@ -96,38 +96,42 @@
         <%= render "description" %>
       </div>
       <div>
-        <% if @formation.certifiee %>
-          <div class="my-5 paiements">
-            <h4 class="text-center">S'inscrire à cette formation en...</h4>
-            <div class="c_paiements">
-              <div class="d-flex justify-content-center">
-                <div class="paiements-btn d-flex justify-content-center align-items-center">En carte bleue</div>
-              </div>
-              <div class="d-flex justify-content-center">
-                <div class="paiements-btn d-flex justify-content-center align-items-center">Paypal</div>
-              </div>
-              <div class="d-flex justify-content-center">
-                <div class="paiements-btn d-flex justify-content-center align-items-center"><%= link_to "Avec votre CPF", @formation.liencpf %></div>
-              </div>
-              <div class="d-flex justify-content-center" >
-                <button type="button" class="paiements-btn d-flex justify-content-center align-items-center" data-bs-toggle="modal" data-bs-target="#paiementModal">CPF & Carte bleue</button>
-              </div>
-            </div>
-          </div>
-        <% else %>
-          <div class="d-flex justify-content-center">
-            <div class="paiement">
-              <h4 class="text-center">S'inscrire et régler</h4>
-              <div class="row">
-                <div class="d-flex justify-content-center col-6">
-                  <div class="paiements-btn">En carte bleue</div>
+        <% if user_signed_in? %>
+          <% if @formation.certifiee %>
+            <div class="my-5 paiements">
+              <h4 class="text-center">S'inscrire à cette formation en...</h4>
+              <div class="c_paiements">
+                <div class="d-flex justify-content-center">
+                  <div class="paiements-btn d-flex justify-content-center align-items-center">En carte bleue</div>
                 </div>
-                <div class="d-flex justify-content-center col-6">
+                <div class="d-flex justify-content-center">
                   <div class="paiements-btn d-flex justify-content-center align-items-center">Paypal</div>
                 </div>
+                <div class="d-flex justify-content-center">
+                  <div class="paiements-btn d-flex justify-content-center align-items-center"><%= link_to "Avec votre CPF", @formation.liencpf %></div>
+                </div>
+                <div class="d-flex justify-content-center" >
+                  <button type="button" class="paiements-btn d-flex justify-content-center align-items-center" data-bs-toggle="modal" data-bs-target="#paiementModal">CPF & Carte bleue</button>
+                </div>
               </div>
             </div>
-          </div>
+          <% else %>
+            <div class="d-flex justify-content-center">
+              <div class="paiement">
+                <h4 class="text-center">S'inscrire et régler</h4>
+                <div class="row">
+                  <div class="d-flex justify-content-center col-6">
+                    <div class="paiements-btn">En carte bleue</div>
+                  </div>
+                  <div class="d-flex justify-content-center col-6">
+                    <div class="paiements-btn d-flex justify-content-center align-items-center">Paypal</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          <% end %>
+        <% else %>
+          <p>Inscrivez-vous.</p>
         <% end %>
       </div>
     <% end %>
