fix bug front sur les boutons de paiement

--- a/app/views/formations/show.html.erb
+++ b/app/views/formations/show.html.erb
@@ -22,118 +22,124 @@
       <%= render "list" %>
   <% end %>
 
-    <% if @formation.videos.attached? || @formation.photos.attached? %>
-      <div class="c_card-show">
-        <%= render "description" %>
-        <div>
-          <div>
-            <% if @formation.videos.attached? %>
-              <% @formation.videos.each do |video| %>
-                <%= cl_video_tag video.key, class:"video-formation" %>
-              <% end %>
-            <% end %>
-          </div>
-          <div>
-            <% if @formation.photos.attached? %>
-              <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                  <% @formation.photos.each do |photo| %>
-                    <div class="carousel-item active">
-                      <%= cl_image_tag photo.key %>
-                    </div>
-                  <% end %>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
-                </button>
-              </div>
-            <% end %>
-          </div>
-        </div>
-        <div>
-          <% if @formation.certifiee %>
-            <div class="my-5 paiements">
-              <h4 class="text-center">S'inscrire à cette formation en...</h4>
-              <div class="c_paiements">
-                <div class="d-flex justify-content-center">
-                  <div class="paiements-btn d-flex justify-content-center align-items-center">En carte bleue</div>
-                </div>
-                <div class="d-flex justify-content-center">
-                  <div class="paiements-btn d-flex justify-content-center align-items-center">Paypal</div>
-                </div>
-                <div class="d-flex justify-content-center">
-                  <div class="paiements-btn d-flex justify-content-center align-items-center"><%= link_to "Avec votre CPF", @formation.liencpf %></div>
-                </div>
-                <div class="d-flex justify-content-center" >
-                  <button type="button" class="paiements-btn d-flex justify-content-center align-items-center" data-bs-toggle="modal" data-bs-target="#paiementModal">CPF & Carte bleue</button>
-                </div>
-              </div>
-            </div>
-          <% else %>
-            <div class="d-flex justify-content-center">
-              <div class="paiement">
-                <h4 class="text-center">S'inscrire et régler</h4>
-                <div class="row">
-                  <div class="d-flex justify-content-center col-6">
-                    <div class="paiements-btn">En carte bleue</div>
-                  </div>
-                  <div class="d-flex justify-content-center col-6">
-                    <div class="paiements-btn d-flex justify-content-center align-items-center">Paypal</div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          <% end %>
-        </div>
-      </div>
-    <% else %>
+  <% if @formation.videos.attached? || @formation.photos.attached? %>
+    <div class="c_card-show">
       <div style="width:80%" class="mx-auto">
         <%= render "description" %>
       </div>
       <div>
-        <% if user_signed_in? %>
-          <% if @formation.certifiee %>
-            <div class="my-5 paiements">
-              <h4 class="text-center">S'inscrire à cette formation en...</h4>
-              <div class="c_paiements">
-                <div class="d-flex justify-content-center">
-                  <div class="paiements-btn d-flex justify-content-center align-items-center">En carte bleue</div>
-                </div>
-                <div class="d-flex justify-content-center">
-                  <div class="paiements-btn d-flex justify-content-center align-items-center">Paypal</div>
-                </div>
-                <div class="d-flex justify-content-center">
-                  <div class="paiements-btn d-flex justify-content-center align-items-center"><%= link_to "Avec votre CPF", @formation.liencpf %></div>
-                </div>
-                <div class="d-flex justify-content-center" >
-                  <button type="button" class="paiements-btn d-flex justify-content-center align-items-center" data-bs-toggle="modal" data-bs-target="#paiementModal">CPF & Carte bleue</button>
-                </div>
-              </div>
-            </div>
-          <% else %>
-            <div class="d-flex justify-content-center">
-              <div class="paiement">
-                <h4 class="text-center">S'inscrire et régler</h4>
-                <div class="row">
-                  <div class="d-flex justify-content-center col-6">
-                    <div class="paiements-btn">En carte bleue</div>
+        <div>
+          <% if @formation.videos.attached? %>
+            <% @formation.videos.each do |video| %>
+              <%= cl_video_tag video.key, class:"video-formation" %>
+            <% end %>
+          <% end %>
+        </div>
+        <div>
+          <% if @formation.photos.attached? %>
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+              <div class="carousel-inner">
+                <% @formation.photos.each do |photo| %>
+                  <div class="carousel-item active">
+                    <%= cl_image_tag photo.key %>
                   </div>
-                  <div class="d-flex justify-content-center col-6">
-                    <div class="paiements-btn d-flex justify-content-center align-items-center">Paypal</div>
-                  </div>
-                </div>
+                <% end %>
               </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
             </div>
           <% end %>
-        <% else %>
-          <p>Inscrivez-vous.</p>
-        <% end %>
+        </div>
       </div>
+    </div>
+  <% else %>
+    <div style="width:80%" class="mx-auto">
+      <%= render "description" %>
+    </div>
+    <div>
+      <% if user_signed_in? %>
+        <% if @formation.certifiee %>
+          <div class="my-5 paiements">
+            <h4 class="text-center">S'inscrire à cette formation en...</h4>
+            <div class="c_paiements">
+              <div class="d-flex justify-content-center">
+                <div class="paiements-btn d-flex justify-content-center align-items-center">En carte bleue</div>
+              </div>
+              <div class="d-flex justify-content-center">
+                <div class="paiements-btn d-flex justify-content-center align-items-center">Paypal</div>
+              </div>
+              <div class="d-flex justify-content-center">
+                <div class="paiements-btn d-flex justify-content-center align-items-center"><%= link_to "Avec votre CPF", @formation.liencpf %></div>
+              </div>
+              <div class="d-flex justify-content-center" >
+                <button type="button" class="paiements-btn d-flex justify-content-center align-items-center" data-bs-toggle="modal" data-bs-target="#paiementModal">CPF & Carte bleue</button>
+              </div>
+            </div>
+          </div>
+        <% else %>
+          <div class="d-flex justify-content-center">
+            <div class="paiement">
+              <h4 class="text-center">S'inscrire et régler</h4>
+              <div class="row">
+                <div class="d-flex justify-content-center col-6">
+                  <div class="paiements-btn">En carte bleue</div>
+                </div>
+                <div class="d-flex justify-content-center col-6">
+                  <div class="paiements-btn d-flex justify-content-center align-items-center">Paypal</div>
+                </div>
+              </div>
+            </div>
+          </div>
+        <% end %>
+      <% else %>
+        <p>Inscrivez-vous.</p>
+      <% end %>
+    </div>
+  <% end %>
+
+  <div>
+    <% if user_signed_in? %>
+      <% if @formation.certifiee %>
+        <div class="my-5 paiements">
+          <h4 class="text-center">S'inscrire à cette formation en...</h4>
+          <div class="c_paiements">
+            <div class="d-flex justify-content-center">
+              <div class="paiements-btn d-flex justify-content-center align-items-center">En carte bleue</div>
+            </div>
+            <div class="d-flex justify-content-center">
+              <div class="paiements-btn d-flex justify-content-center align-items-center">Paypal</div>
+            </div>
+            <div class="d-flex justify-content-center">
+              <div class="paiements-btn d-flex justify-content-center align-items-center"><%= link_to "Avec votre CPF", @formation.liencpf %></div>
+            </div>
+            <div class="d-flex justify-content-center" >
+              <button type="button" class="paiements-btn d-flex justify-content-center align-items-center" data-bs-toggle="modal" data-bs-target="#paiementModal">CPF & Carte bleue</button>
+            </div>
+          </div>
+        </div>
+      <% else %>
+        <div class="d-flex justify-content-center">
+          <div class="paiement">
+            <h4 class="text-center">S'inscrire et régler</h4>
+            <div class="row">
+              <div class="d-flex justify-content-center col-6">
+                <div class="paiements-btn">En carte bleue</div>
+              </div>
+              <div class="d-flex justify-content-center col-6">
+                <div class="paiements-btn d-flex justify-content-center align-items-center">Paypal</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      <% end %>
+    <% else %>
+      <p>Inscrivez-vous.</p>
     <% end %>
   </div>
 </div>
