--- a/app/assets/stylesheets/components/_show.scss
+++ b/app/assets/stylesheets/components/_show.scss
@@ -36,7 +36,7 @@
         border-radius: 10px;
         img {
           width: 40vw;
-          height: auto;
+          height: 40vh;
         }
       }
     }
