--- a/app/assets/stylesheets/components/_form_legend_clear.scss
+++ b/app/assets/stylesheets/components/_form_legend_clear.scss
@@ -50,13 +50,30 @@ legend ~ div.form-check:first-of-type {
   margin: auto;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
+  justify-content: space-around;
+  margin-top: 10vh;
+  .number_field {
+    border-radius: 10px;
+    border: $navy 1px solid !important;
+    color: $navy;
+    width: 10vw;
+  }
   select{
     width: 10vw;
-    color: $navy;
-    background-color: $light-gold;
-    opacity: 0.7;
+    color: white;
+    background-color: $navy;
     border-radius: 10px;
-    border: none !important;
+    border: $navy 1px solid !important;
+  }
+  button{
+    border: 1px solid $navy;
+    color: $navy;
+    border-radius: 10px;
+    padding: 10px;
+    &:hover{
+      background-color: $navy;
+      color: white;
+    }
   }
 }
 
