--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -26,8 +26,8 @@
         <li class="my-2"><%= link_to "Contactez-nous", "#" %></li>
         <div class="social-media my-2 " style="width:50%">
           <ul class="list-group list-group-horizontal d-flex justify-content-around">
-            <li class="list-unstyled"><a href=""><i class="fa-brands fa-facebook"></a></i></li>
-            <li class="list-unstyled"><a href=""><i class="fa-brands fa-twitter"></a></i></li>
+            <li class="list-unstyled"><a href=""><i class="fab fa-facebook"></i></a></li>
+            <li class="list-unstyled"><a href=""><i class="fa-brands fa-twitter"></i></a></li>
             <li class="list-unstyled"><a href=""><i class="fa-brands fa-instagram-square"></i></a></li>
             <li class="list-unstyled"><a href=""><i class="fa-brands fa-youtube"></i></a></li>
             <li class="list-unstyled"><a href=""><i class="fab fa-linkedin"></i></a></li>
