--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -26,20 +26,29 @@
           <div>
             <%= f.input :password, label: "Mot de passe",
                         required: true,
-                        hint: ("8 caractères minimum, au moins une lettre et un chiffre"),
-                        input_html: { autocomplete: "new-password" },
-                        type:"password",
-                        data: {password_visibility_target: "input" }
+                        hint: ("8 caractères min., une lettre et un chiffre"),
+                        input_html: { autocomplete: "new-password", data: { password_visibility_target: "input1" } },
+                        type:"password"
                         %>
-              <button type="button" data-action="click->password-visibility#password">
-                <span data-password-visibility-target="icon">Eye</span>
-                <span data-password-visibility-target="icon" class="d-none">Eye Slash</span>
-              </button>
+              <div type="button" data-action="click->password-visibility#password1" >
+                <span class="material-symbols-outlined" data-password-visibility-target="icon1">
+                  visibility
+                </span>
+                <span class="material-symbols-outlined d-none" data-password-visibility-target="icon2">
+                visibility_off
+                </span>
+              </div>
           </div>
-          <%= f.input :password_confirmation,
-                      label: "Confirmez votre mot de passe",
-                      required: true,
-                      input_html: { autocomplete: "new-password" } %>
+          <div>
+            <%= f.input :password_confirmation,
+                        label: "Confirmez votre mot de passe",
+                        required: true,
+                        input_html: { autocomplete: "new-password", data: { password_visibility_target: "input2" } } %>
+            <div type="button" data-action="click->password-visibility#password2" >
+                <span data-password-visibility-target="icon3" class="material-symbols-outlined">visibility</span>
+                <span data-password-visibility-target="icon4" class="material-symbols-outlined d-none">visibility_off</span>
+            </div>
+          </div>
         </div>
         <div class="c_form-inputs">
           <%= f.input :addresse, label: "Adresse",
