--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -2,7 +2,7 @@
   <%= link_to root_path do %>
     <%= image_tag "https://res.cloudinary.com/de3m2ax5t/image/upload/v1654681400/EKPA_jep8b6.png", class:"navbar-logo" %>
   <% end %>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse flex-grow-0">
@@ -18,18 +18,18 @@
       </li>
     </ul>
   </div>
-  <div class="collapse navbar-collapse flex-grow-0" id="navbarNavDropdown">
+  <div class="collapse navbar-collapse flex-grow-0">
       <div class="nav-item dropdown">
         <% if user_signed_in? && current_user.photo.present? %>
-          <%= cl_image_tag current_user.photo.key, class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          <%= cl_image_tag current_user.photo.key, class: "avatar dropdown-toggle", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" id="navbarNavDropdown">
             <%= link_to "Mon dashboard", inscriptions_path, class:"dropdown-item" %>
             <%= link_to "Modifier mes informations", edit_user_registration_path, class:"dropdown-item" %>
             <%= link_to "Se déconnecter", destroy_user_session_path, class: "dropdown-item" %>
           </div>
         <% elsif user_signed_in? && !current_user.photo.present? %>
           <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" id="navbarNavDropdown">
             <%= link_to "Mon dashboard", inscriptions_path, class:"dropdown-item" %>
             <%= link_to "Modifier mes informations", edit_user_registration_path, class:"dropdown-item" %>
             <%= link_to "Se déconnecter", destroy_user_session_path, class: "dropdown-item" %>
