--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,23 +1,10 @@
-<div class="container">
-  <h1>Contact Form</h1>
-  <%= form_for @contact do |f| %>
-    <div class="col-md-6">
-      <%= f.label :name %><br>
-      <%= f.text_field  :name, required: true, class: "contact-form-text-area" %><br>
-
-      <%= f.label :email %><br>
-      <%= f.text_field :email, required: true, class: "contact-form-text-area" %><br>
-
-      <%= f.label :body %><br>
-      <%= f.text_area :body, rows: 8, cols: 40, required: true, class: "contact-form-text-area",
-            placeholder: "Send me a message"%><br>
-
-      <div class= "d-none">
-        <%= f.label :nickname %>
-        <%= f.text_field :nickname, :hint => 'Leave this field blank!' %>
-      </div>
-
-      <%= f.submit 'Send Message', class: 'btn btn-primary' %>
-    </div>
-  <% end %>
-</div>
+<h3>Contact Us</h3>
+<%= form_with(model: @contact, local: true) do |f| %>
+  <%= f.label :name, "name" %>
+  <%= f.text_field :name %>
+  <%= f.label :email, "mail address" %>
+  <%= f.email_field :email, autocomplete: "email" %>
+  <%= f.label :content, "Not like" %>
+  <%= f.text_field :content %>
+  <%= f.submit "Come" %>
+<% end %>
