paypal en cours

--- a/app/views/formations/show.html.erb
+++ b/app/views/formations/show.html.erb
@@ -74,6 +74,8 @@
               <div class="paiements-btn d-flex justify-content-center align-items-center">En carte bleue</div>
             </div>
             <div class="d-flex justify-content-center">
+              <%= simple_form_for do |t| %>
+              <% end %>
               <div class="paiements-btn d-flex justify-content-center align-items-center">Paypal</div>
             </div>
             <div class="d-flex justify-content-center">
