--- a/app/views/formations/show.html.erb
+++ b/app/views/formations/show.html.erb
@@ -64,12 +64,6 @@
     </div>
   <% end %>
 
-<%= simple_form_for [@formation, @new_order] do |f| %>
-  <%= f.input :formation, input_html: {value: @formation} %>
-  <%= f.input :user, input_html: {value: current_user} %>
-  <%= submit_tag 'Purchase', class: 'btn btn-primary' %>
-<% end %>
-
   <div>
     <% if user_signed_in? %>
       <% if @formation.certifiee %>
@@ -77,11 +71,15 @@
           <h4 class="text-center">S'inscrire à cette formation en...</h4>
           <div class="c_paiements">
             <div class="d-flex justify-content-center">
-              <div class="paiements-btn d-flex justify-content-center align-items-center">En carte bleue</div>
+              <div class="paiements-btn d-flex justify-content-center align-items-center">
+                <%= simple_form_for [@formation, @new_order] do |f| %>
+                  <%= f.input :formation, input_html: {value: @formation}, as: :hidden %>
+                  <%= f.input :user, input_html: {value: current_user}, as: :hidden %>
+                  <%= submit_tag 'En carte bleue', class:"btn btn-link" %>
+                <% end %>
+              </div>
             </div>
             <div class="d-flex justify-content-center">
-              <%= simple_form_for do |t| %>
-              <% end %>
               <div class="paiements-btn d-flex justify-content-center align-items-center">Paypal</div>
             </div>
             <div class="d-flex justify-content-center">
