--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -1,9 +1,24 @@
 <div class="container">
+  <h1>Récapitulatif de votre achat</h1>
   <div class="row py-4">
     <div class="col">
-      <h1>Checkout summary</h1>
-      <p>Purchase of <strong><%= @order.formation.titre %></strong> for <strong><%= @order.amount %></strong></p>
-      <button id="pay" class="btn btn-primary">Pay</button>
+        <% if @order.formation.photos.attached? %>
+          <%= cl_image_tag @order.formation.photos.first.key, style:"width: 50%;border-radius: 10px;" %>
+        <% else %>
+          <%= image_tag "https://res.cloudinary.com/de3m2ax5t/image/upload/v1654539015/business-team_BT6YG9XMB0_zka89k.jpg", style:"width: 50%;border-radius: 10px;" %>
+        <% end %>
+    </div>
+    <div class="col d-flex align-items-center">
+      <ul>
+        <li>Nom de la formation: <strong><%= @order.formation.titre %></strong></li>
+        <li>Durée : <strong><%= @order.formation.duree %></strong></li>
+        <li>Prix : <strong><%= @order.amount %>€</strong></li>
+      </ul>
+    </div>
+  </div>
+      <div class="d-flex justify-content-end">
+        <button id="pay" class="btn btn-primary">Régler votre formation</button>
+      </div>
       <script src="https://js.stripe.com/v3/"></script>
       <script>
         const paymentButton = document.getElementById('pay');
@@ -14,6 +29,4 @@
           });
         });
       </script>
-    </div>
-  </div>
 </div>
