--- a/app/views/formations/show.html.erb
+++ b/app/views/formations/show.html.erb
@@ -80,7 +80,34 @@
               </div>
             </div>
             <div class="d-flex justify-content-center">
-              <div class="paiements-btn d-flex justify-content-center align-items-center">Paypal</div>
+              <div class="paiements-btn d-flex justify-content-center align-items-center">
+                <div id="paypal-button-container"></div>
+                <script src="https://www.paypal.com/sdk/js?client-id=AdurcPY4JqwnFY6qKcEtIvYITb5_22nOO8i9FH5WWggKmCB1VLxf9R_UQHzNAE6O9taDhI0bHLP3FvLo"></script>
+                <script>
+                  paypal.Buttons({
+                    env: 'sandbox', // Valid values are sandbox and live.
+                    createOrder: async () => {
+                      const response = await fetch('/create_order', {method: 'POST'});
+                      const responseData = await response.json();
+                      return responseData.token;
+                    },
+                    onApprove: async (data) => {
+                      const response = await fetch('/capture_order', {
+                        method: 'POST',
+                        headers: {
+                          'Content-Type': 'application/json'
+                        },
+                        body: JSON.stringify({order_id: data.orderID})
+                      });
+                      const responseData = await response.json();
+                      if (responseData.status === 'COMPLETED') {
+                        alert('COMPLETED');
+                        // REDIRECT TO SUCCESS PAGE
+                      }
+                    }
+                  }).render('#paypal-button-container');
+                </script>
+              </div>
             </div>
             <div class="d-flex justify-content-center">
               <div class="paiements-btn d-flex justify-content-center align-items-center"><%= link_to "Avec votre CPF", @formation.liencpf %></div>
