--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -2,8 +2,8 @@
   <div class="text-center d-flex justify-content-between flex-column">
     <h3>Une question ? Un renseignement ? Un devis ?</h3>
     <h2>C'est ici !</h2>
-    <p>Nous nous tenons à votre disposition par mail (via le formulaire) ou par téléphone au XX.XX.XX.XX.XX (de xxh à xxh, du lundi au vendredi).</p>
-    <p>Réponse dans les <strong>XX</strong>h garantie !</p>
+    <p>Nous nous tenons à votre disposition par mail (via le formulaire) ou par téléphone au 07.64.18.09.26 (de xxh à xxh, du lundi au vendredi).</p>
+    <p>Réponse dans les <strong>24</strong>h (ouvrées) garanties !</p>
   </div>
   <div id="contact-form">
     <%= simple_form_for @contact do |f| %>
