--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -80,3 +80,11 @@
   border-radius: 0px 2px 2px 0px;
   border: none;
 }
+
+.paypal-button-row{
+  width: 70px !important;
+}
+
+.paypal-button-number-1{
+  display: none !important;
+}
