--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -3,7 +3,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 2rem;
-  margin-top: 6rem;
+  // margin-top: 6rem;
   padding: 2rem 3rem 1rem 3rem;
   .footer-col{
     display: flex;
