--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -57,7 +57,7 @@
 // Extra large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) {
   .navbar-ekpa {
-    height: 100px;
+    height: 20vh;
     img {
       width: 120px;
     }
