--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,8 +1,9 @@
 // Import Google fonts
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap');
 // Define fonts for body and headers
-$body-font: "Inter", "Helvetica", "sans-serif";
-$headers-font: "Inter", "Helvetica", "sans-serif";
+$body-font: "Noto Sans", "Helvetica", "sans-serif";
+$headers-font: "Noto Sans", "Helvetica", "sans-serif";
 
 
 // To use a font file (.woff) uncomment following lines
