--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,7 +4,13 @@
       <%= image_tag "https://res.cloudinary.com/de3m2ax5t/image/upload/v1654681400/EKPA_jep8b6.png", class:"navbar-logo" %>
       <h2>EKPA France</h2>
     </div>
-    <div class="footer_col_2">Integer et vehicula enim, eleifend fermentum risus. Etiam pellentesque commodo lacus vel tincidunt. In posuere risus sapien, ac gravida ligula volutpat sit amet. </div>
+    <div class="footer_col_2">Trouvez votre formation continue en
+      <ul class="list-unstyled">
+        <li class="mx-3">présentiel,</li>
+        <li class="mx-3">distanciel,</li>
+        <li class="mx-3">e-learning.</li>
+      </ul>
+    </div>
   </div>
   <div class="footer-col">
     <div class="text-left">
@@ -21,9 +27,9 @@
     <div class="text-left">
       <h2>Nous retrouver</h2>
       <ul class="list-unstyled">
-        <li class="my-2">179 avenue des Champs Elysées, <br> 75008 Paris</li>
-        <li class="my-2">01.09.08.07.06</li>
-        <li class="my-2"><%= link_to "Contactez-nous", "#" %></li>
+        <li class="my-2">22 Avenue Louis de Foix <br> 64100 Bayonne</li>
+        <li class="my-2">07.64.18.09.26</li>
+        <li class="my-2"><%= link_to "Contactez-nous", new_contacts_path %></li>
         <div class="social-media my-2 " style="width:50%">
           <ul class="list-group list-group-horizontal d-flex justify-content-around">
             <li class="list-unstyled"><a href=""><i class="fab fa-facebook"></i></a></li>
