--- a/app/views/inscriptions/index.html.erb
+++ b/app/views/inscriptions/index.html.erb
@@ -1,6 +1,6 @@
 <% if @inscriptions.count.zero? %>
   <h3 class="text-center">Vous n'avez pas encore fait de formations avec Ekpa !</h3>
-  <% if @order.state == "pending" %>
+  <% if @order.state == "pending" && !@order.nil? %>
     <p>valider votre inscription</p>
     <%= simple_form_for [@new_inscription] do |f| %>
       <%= f.input :formation, input_html: {value: @formation.id}, as: :hidden %>
